--- a/views/url/index.erb
+++ b/views/url/index.erb
@@ -10,9 +10,9 @@
   <tbody>
     <% @urls.each do |url| %>
     <tr>
-      <td><%=url.slang%></td>
-      <td><%=url.clicks%></td>
-      <td><%=url.when%></td>
+      <td><%= url[:slang] %></td>
+      <td><%= url[:clicks] %></td>
+      <td><%= url[:stamp] %></td>
     </tr>
     <% end %>
   </tbody>
